phpBB/adm/style/admin.css
/*  phpBB 3.0 Admin Style Sheet
    ------------------------------------------------------------------------
	Original author:	subBlue ( http://www.subBlue.com/ )
	Copyright 2006 phpBB Group ( http://www.phpbb.com/ )
    ------------------------------------------------------------------------
*/


/* General markup styles
---------------------------------------- */
* {
	/* Reset browsers default margin, padding and font sizes */
	margin: 0;
	padding: 0;
}

html {
	font-size: 100%;
	height: 100%;
	margin-bottom: 1px;
	background-color: #E4EDF0;
}

body {
	/* Text-Sizing with ems: http://www.clagnut.com/blog/348/ */
	font-family: Verdana, Helvetica, Arial, sans-serif;
	color: #536482;
	background: #E4EDF0 url("../images/bg_header.gif") 0 0 repeat-x;
	font-size: 62.5%;			/* This sets the default font size to be equivalent to 10px */
	margin: 0;
}

img {
	border: 0;
}

h1 {
	font: bold 1.8em 'Trebuchet MS', Verdana, sans-serif;
	text-decoration: none; 
	color: #333333;
}

h2, caption {
	font: bold 1.2em Arial, Helvetica, sans-serif;
	text-decoration: none; 
	line-height: 120%; 
	text-align: left;
	margin-top: 25px;
}

p {
	margin-bottom: 0.7em;
	line-height: 1.4em;
	font-size: 1.1em;
}

ul {
	list-style: disc;
	margin-left: 2em;	
	margin-bottom: 1em;
}

hr {
	border: 0 none;
	border-top: 1px solid #999999;
	margin-bottom: 5px;
	padding-bottom: 5px;
	height: 1px;
}

.small { 
	font-size: 1em; 
}


/* General links  */
a:link, a:active, a:visited { 
	color: #006699; 
	text-decoration: none; 
}

a:hover { 
	color: #DD6900; 
	text-decoration: underline; 
}


/* Main blocks
---------------------------------------- */
#wrap {
	padding: 0 20px 15px 20px;
	min-width: 615px;
}

#page-header {
	text-align: right;
	background: url("../images/phpbb_logo.gif") 0 0 no-repeat;
	height: 84px;
}

#page-header h1 {
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 1.5em;
	font-weight: normal;
	padding-top: 15px;
}

#page-header p {
	font-size: 1.1em;
}

#page-body {
	clear: both;
}

#page-footer {
	clear: both;
	font-size: 1em;
	text-align: center;
}

#content {
	padding: 30px 10px 10px 10px;
}

#content h1 {
	line-height: 1.2em; 
	margin-bottom: 0px;
}

#main {
	float:left;
	width: 76%;
	margin-left: 3%;
	min-height: 350px;
}

* html #main { 
	height: 350px; 
}


/* Tabbed menu
   Based on: http://www.alistapart.com/articles/slidingdoors2/
----------------------------------------*/
#tabs {
	line-height: normal;
	margin: 0 0 -6px 7px;
	min-width: 570px;
}

#tabs ul {
	margin:0;
	padding: 0;
	list-style: none;
}

#tabs li {
	display: inline;
	margin: 0;
	padding: 0;
	font-size: 1em;
	font-weight: bold;
}

#tabs a {
	float:left;
	background:url("../images/bg_tabs1.gif") no-repeat 0% -35px;
	margin: 0 1px 0 0;
	padding: 0 0 0 6px;
	text-decoration: none;
	position: relative;
}

#tabs a span {
	float: left;
	display: block;
	background: url("../images/bg_tabs2.gif") no-repeat 100% -35px;
	padding: 7px 12px 6px 6px;
	color: #536482;
	white-space: nowrap;
	text-transform: uppercase;
}

/* Commented Backslash Hack hides rule from IE5-Mac \*/
#tabs a span { float:none; }
/* End hack */

#tabs a:hover span {
	color: #DD6900;
}

#tabs #activetab a {
	background-position: 0 0px;
	border-bottom: 1px solid #FFFFFF;
}

#tabs #activetab a span {
	background-position: 100% 0px;
	padding-bottom: 7px;
	color: #333333;
}

#tabs a:hover {
	background-position: 0 -70px;
}

#tabs a:hover span {
	background-position:100% -70px;
}

#tabs #activetab a:hover span {
	color: #333333;
}


/* Main Panel
---------------------------------------- */
.panel {
	margin: 4px 0;
	background-color: #FFFFFF;
	border: solid 1px  #A9B8C2;
}

span.corners-top, span.corners-bottom, 
span.corners-top span, span.corners-bottom span {
	display: none;
}


/* Sub-navigation Menu
---------------------------------------- */
#menu {
	float: left;
	width: 20%;
	font-size: 100%;
	padding: 0;
}

#menu p {
	font-size: 1em;
}

#menu ul {
	list-style: none;
	margin: 0;
}

/* Default list state */
#menu li {
	font-size: 1em;
	font-weight: bold;
	display: inline;
}

/* Link styles for the sub-section links */
#menu li span {
	display: block;
	padding: 3px 2px 3px 10px;
	text-decoration: none;
	font-weight: normal;
	color: #006699;
	font-weight: bold;
	background-color: #ECECEC;
	border-top: 1px solid #FFFFFF;
}

#menu li a:hover span, #menu li#activemenu span, #menu li a:hover {
	text-decoration: none;
	background-color: #FFA34F;
	color: #FFFFFF;
}

#menu li span.completed {
	text-decoration: none;
	background-color: #B9DBB3;
	color: #006699;
}

#menu li.header {
	display: block;
	padding: 5px;
	font-size: 0.9em;
	font-family: Verdana;
	color: #FFA34F; 
	font-weight: bold;
	background: #006699 url("../images/cellpic3.gif") 0 0 repeat-x;
	margin-top: 5px;
	text-transform: uppercase;
}

#menu li#activemenu a span {
	text-decoration: none;
	font-weight: bold;
	color: #000;
	background-color: #DADFE4;
}

#menu li#activemenu a:hover span {
	text-decoration: none;
	color: #000;
}


/* Table styles
---------------------------------------- */

table {
	width: 100%;
	/*background-color: #ACBBC6;*/
}

th, td { 
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 1.1em;
	text-align: left;
}

th {
	padding: 6px 4px;
	color: #FFA34F;
	font-weight: bold;
	background: #006699 url("../images/cellpic3.gif") 0 0 repeat-x;
}

td {
	padding: 4px;
	line-height: 1.2em;
}

.row1 { background-color: #EFEFEF; }
.row2 { background-color: #DEE3E7; }
.row3 { background-color: #D1D7DC; }
.row4 { background-color: #E4E8EB; }
.col1 { background-color: #DEE3E7; }
.col2 { background-color: #EFEFEF; }

.spacer {
	background-color: #D1D7DC;
	height: 1px;
	line-height: 1px;
}

table.type2 {
	border: none;
	background: none;
	padding: 0;
	width: 0;
}

table.type2 th {
	background: none;
	border-top: none;
	text-align: center;
	color: #FFA34F;
	padding: 2px 0;
}

table.type2 td {
	padding: 0;
}
/* ... */

